log/build_2024-03-03_11-07-03/NIDS_PKG/stdout_stderr.log
/home/gmo-pop/.local/lib/python3.10/site-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
running egg_info
writing ../../build/NIDS_PKG/NIDS_PKG.egg-info/PKG-INFO
writing dependency_links to ../../build/NIDS_PKG/NIDS_PKG.egg-info/dependency_links.txt
writing entry points to ../../build/NIDS_PKG/NIDS_PKG.egg-info/entry_points.txt
writing requirements to ../../build/NIDS_PKG/NIDS_PKG.egg-info/requires.txt
writing top-level names to ../../build/NIDS_PKG/NIDS_PKG.egg-info/top_level.txt
reading manifest file '../../build/NIDS_PKG/NIDS_PKG.egg-info/SOURCES.txt'
writing manifest file '../../build/NIDS_PKG/NIDS_PKG.egg-info/SOURCES.txt'
running build
running build_py
copying NIDS_PKG/master_node_script_node.py -> /home/gmo-pop/Desktop/DistriLearn/build/NIDS_PKG/build/lib/NIDS_PKG
running install
running install_lib
copying /home/gmo-pop/Desktop/DistriLearn/build/NIDS_PKG/build/lib/NIDS_PKG/master_node_script_node.py -> /home/gmo-pop/Desktop/DistriLearn/install/NIDS_PKG/lib/python3.10/site-packages/NIDS_PKG
byte-compiling /home/gmo-pop/Desktop/DistriLearn/install/NIDS_PKG/lib/python3.10/site-packages/NIDS_PKG/master_node_script_node.py to master_node_script_node.cpython-310.pyc
  File "/home/gmo-pop/Desktop/DistriLearn/install/NIDS_PKG/lib/python3.10/site-packages/NIDS_PKG/master_node_script_node.py", line 38
    		self.setfit = SetFitModel.from_pretrained(f"{os.environ["HOME"]}/bertbased_ids/setfit_mobile_siamese", device=device, use_differentiable_head=use_dh)
    		                                                         ^^^^
SyntaxError: f-string: unmatched '['

running install_data
running install_egg_info
removing '/home/gmo-pop/Desktop/DistriLearn/install/NIDS_PKG/lib/python3.10/site-packages/NIDS_PKG-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/NIDS_PKG/NIDS_PKG.egg-info to /home/gmo-pop/Desktop/DistriLearn/install/NIDS_PKG/lib/python3.10/site-packages/NIDS_PKG-0.0.0-py3.10.egg-info
running install_scripts
Installing ap_node script to /home/gmo-pop/Desktop/DistriLearn/install/NIDS_PKG/lib/NIDS_PKG
Installing master_node script to /home/gmo-pop/Desktop/DistriLearn/install/NIDS_PKG/lib/NIDS_PKG
writing list of installed files to '/home/gmo-pop/Desktop/DistriLearn/build/NIDS_PKG/install.log'
